feature: fusion carousel

--- a/apps/evm/src/assets/locales/en/translation.json
+++ b/apps/evm/src/assets/locales/en/translation.json
@@ -57,7 +57,7 @@
     },
     "challenges": {
       "title": "Challenges",
-      "content": "Participate in our educational quests to learn more about BOB, leverage your network to spread the word about BOB, get to know the projects. Any successful participation will help you climb the leaderboard even quicker. <galxeLink>View challenges at Galxe</galxeLink>."
+      "content": "Participate in our educational quests to learn more about BOB, leverage your network to spread the word about BOB, get to know the projects. Any successful participation will help you climb the leaderboard even quicker. <challengeLink>View challenges at Intract</challengeLink>."
     },
     "ecosystem": {
       "title": "Ecosystem",
