--- a/apps/evm/src/assets/locales/zh/translation.json
+++ b/apps/evm/src/assets/locales/zh/translation.json
@@ -57,7 +57,7 @@
     },
     "challenges": {
       "title": "挑战",
-      "content": "欢迎您参与我们的教育任务，了解更多关于 BOB 的信息，利用您的网络传播关于BOB的知识，学习了解BOB生态中的项目。成功参与到BOB生态的项目中将帮助您更快地攀升排行榜。<galxeLink>在 Galxe 查看挑战</galxeLink>。"
+      "content": "欢迎您参与我们的教育任务，了解更多关于 BOB 的信息，利用您的网络传播关于BOB的知识，学习了解BOB生态中的项目。成功参与到BOB生态的项目中将帮助您更快地攀升排行榜。<challengeLink>在 Intract 查看挑战</challengeLink>。"
     },
     "ecosystem": {
       "title": "BOB 生态",
