feat: add staking page

--- a/apps/evm/src/assets/locales/en/translation.json
+++ b/apps/evm/src/assets/locales/en/translation.json
@@ -127,6 +127,7 @@
     "t_and_c": "T&Cs",
     "fusion": "Fusion",
     "bridge": "Bridge",
+    "staking": "Staking",
     "wallet": "Wallet",
     "dev": "Dev",
     "about": "About",
@@ -164,6 +165,14 @@
   "bridge": {
     "alert": {
       "alex": "Bridging ALEX is disabled because Alex Lab suffered an exploit involving the XLink bridge. For more information, kindly refer to this <xLink>announcement</xLink>."
+    }
+  },
+  "staking": {
+    "form": {
+      "title": "Stake BTC"
+    },
+    "projects": {
+      "title": "Projects Available"
     }
   }
 }
