chore: fix stake header label

--- a/apps/evm/src/assets/locales/en/translation.json
+++ b/apps/evm/src/assets/locales/en/translation.json
@@ -127,7 +127,7 @@
     "t_and_c": "T&Cs",
     "fusion": "Fusion",
     "bridge": "Bridge",
-    "staking": "Staking",
+    "stake": "Stake",
     "wallet": "Wallet",
     "dev": "Dev",
     "about": "About",
