--- a/apps/evm/src/assets/locales/zh/translation.json
+++ b/apps/evm/src/assets/locales/zh/translation.json
@@ -126,7 +126,7 @@
     "leaderboard": "排行榜",
     "t_and_c": "条款与条件",
     "fusion": "Fusion",
-    "staking": "質押",
+    "stake": "質押",
     "bridge": "桥",
     "wallet": "钱包",
     "dev": "开发者",
