Add staking page (#128)
* feat: add gateway gas switch (#120)

* feat: upgrade to gateway v3

Signed-off-by: Gregory Hill <gregorydhill@outlook.com>

* chore: add logos

Signed-off-by: Gregory Hill <gregorydhill@outlook.com>

* feat: add state to switch and fetch token from sdk

* feat(evm): use sdk as source of thruth

* fix(sats-wagmi): use external lib (#123)

* feat: make everything work

Signed-off-by: Gregory Hill <gregorydhill@outlook.com>

* fix: add missing function parameter

* fix: revert changes to lock file

* chore: trigger build

* feat: add staking page

* chore: rename type

* chore: format with prettier

* chore: fix knip issues

* chore: update bob-sdk and sats-wagmi

Signed-off-by: Gregory Hill <gregorydhill@outlook.com>

* Update apps/evm/src/pages/Bridge/components/BridgeForm/BridgeForm.tsx

* chore: linting

* chore: label

* chore: hyphen

* chore: remove redundant icon

* chore: handle undefined sats balance

* fix: value

* chore: add unstake protocols

* chore: fix naming

* chore: select strategies instead of tokens

* chore: update get balance value

* chore: uniSat casing and Binance logo placeholder

* chore: fix balance request by selecting strategy

* fix: tsc errors

* chore: merge fixes

* remove confitional check from balance value

* correct import of information icon

* chore: restore banner

* chore: hide solvbtc

* chore: code refactoring

* chore: show toast if failed to fetch estimated fee

* chore: set fill to none

* chore: code refactoring

* chore: more refactoring

* chore: remove unused files

* chore: reflect fetched strategies in the list

* fix: remove unused import

* chore: address review remarks

* chore: narrow condition to show liquidity alert

* chore: replace stake CTA button text

* chore: extract transaction modal

* chore: update href for pell network

* chore: remove unused translations

* chore: fix st

--- a/apps/evm/src/assets/locales/zh/translation.json
+++ b/apps/evm/src/assets/locales/zh/translation.json
@@ -126,6 +126,7 @@
     "leaderboard": "排行榜",
     "t_and_c": "条款与条件",
     "fusion": "Fusion",
+    "stake": "質押",
     "bridge": "桥",
     "wallet": "钱包",
     "dev": "开发者",
