--- a/apps/evm/src/assets/locales/en/translation.json
+++ b/apps/evm/src/assets/locales/en/translation.json
@@ -127,6 +127,7 @@
     "t_and_c": "T&Cs",
     "fusion": "Fusion",
     "bridge": "Bridge",
+    "stake": "Stake",
     "wallet": "Wallet",
     "dev": "Dev",
     "about": "About",
