chore: casing DeFi

--- a/apps/evm/src/assets/locales/en/translation.json
+++ b/apps/evm/src/assets/locales/en/translation.json
@@ -135,7 +135,7 @@
   },
   "wallet": {
     "title": "BOB Wallet",
-    "summary": "View a summary of your wallet on the BOB network. De-fi positions may not be tracked.",
+    "summary": "View a summary of your wallet on the BOB network. DeFi positions may not be tracked.",
     "assets": {
       "title": "Total Assets",
       "noAssets": "No assets shown",
