--- a/apps/evm/src/assets/locales/en/translation.json
+++ b/apps/evm/src/assets/locales/en/translation.json
@@ -6,72 +6,27 @@
     "home": "Take 'em home"
   },
   "fusion": {
-    "title": "WELCOME TO BOB <highlight>FUSION</highlight>",
-    "content": "Your pledged assets will unlock on the day of the BOB mainnet launch, planned around the Bitcoin Halving in April. Should unforeseen storms delay our arrival, you will be able to unlock your assets back to your Ethereum mainnet address on 15 May 2024 latest.",
-    "status": "Current Status:",
-    "season": "Season 2",
-    "seasonDescription": "The floodgates have opened! Explore and experience BOB’s vast ecosystem and earn massive amounts of Spice while doing so.",
-    "spiceWaitTime": "Spice points typically take 10-15 minutes to display in the user interface. Rest assured, your points are being recorded accurately.",
-    "deposit": {
-      "delayInfo": "Your locked amount and Spice totals will be updated every few minutes",
-      "title": "Deposit & Lock",
-      "content": "Assets remain securely time-locked in the smart contract until the unlock date. You can then transfer them to the BOB L2 network to continue your harvest.",
-      "auditedBy": "Audited by",
-      "depositLabel": "Deposit & Lock",
-      "approveLabel": "Approve"
+    "communityVoting": {
+      "title": "Community Voting",
+      "roundEnd": "{{timeRemaining}} until voting round ends",
+      "description": "Use your Spice total to support your favourite BOB builders. Winners will be announced each week.",
+      "cta": "Vote"
     },
-    "earnSpice": "How to Earn Spice",
-    "community": {
-      "title": "Join the Community",
-      "content": "Make sure to <xLink>follow BOB on X</xLink> and <discordLink>join the Discord</discordLink> to participate in BOB Fusion and receive updates, access to quests (coming soon) and other alpha!"
+    "leaderboard": {
+      "title": "Leaderboard",
+      "tabs": {
+        "seasonThree": "Season Three",
+        "last24Hours": "Last 24 Hours",
+        "last7Days": "Last 7 Days",
+        "questsOnly": "Quests Only"
+      }
     },
-    "multipliers": {
-      "title": "Multiplier list",
-      "content": "Certain liquidity generates more Spice. Pay attention to the multipliers outlined below."
-    },
-    "withdrawModal": {
-      "title": "Season 1 has ended - Welcome to Season 2!",
-      "summary": "Congratulations! Your initial contribution to BOB’s growth earned you {{totalSpice}} Spice! This has secured you position {{rank}} on the leaderboard for Season 1.",
-      "share": "<xLink>Share your success with your friends</xLink> and invite them to join the Fusion campaign, earn 15% for every Spice they harvest!",
-      "seasonTwoDescription": "Bridge assets, provide liquidity, transact on-chain, and expand your network through referrals to climb the leaderboard faster than ever.",
-      "lockedFunds": "Locked Funds",
-      "currentSpice": "Current Spice",
-      "bridgeLabel": "Bridge to BOB",
-      "withdrawDescription": "Don't believe in the Bitcoin Renaissance? You can withdraw your funds from the contract to your wallet on Ethereum. You will no longer earn Spice if you withdraw your assets. <strong>You will keep the Spice harvested so far.</strong>",
-      "withdrawLabel": "Withdraw Assets",
-      "smartAccountsWarning": "Unfortunately, is not possible to bridge to BOB using smart accounts. We are working on adding support for this in the near future, so follow us for future updates."
-    },
-    "logIn": {
-      "title": "Log in to View Dashboard",
-      "content": "Set sail on your Season 2 adventure, charting new territories and harvesting Spice along the way.",
-      "label": "Start Harvesting Spice "
-    },
-    "referrals": {
-      "title": "Referrals",
-      "content": "Refer fellow explorers and increase your harvest output by +15% of their collected Spice. Another +7% for Spice of second-level referrals."
-    },
-    "partners": {
-      "title": "Ecosystem",
-      "content": "Explore and interact with BOB Fusion allies.",
-      "alert": "Projects harvest Spice points every hour based on TVL and user activity. Projects are responsible for distributing Spice to their users. Distribution method and frequency may differ from project to project. DYOR."
-    },
-    "challenges": {
-      "title": "Challenges",
-      "content": "Participate in our educational quests and climb the leaderboard. <challengeLink>View challenges at Intract</challengeLink>."
-    },
-    "ecosystem": {
-      "title": "Ecosystem",
-      "content": "Explore and engage with BOB's vibrant partner protocols directly on your dashboard—earn Spice by holding assets, making deposits, or actively using these platforms."
-    },
-    "userStats": {
-      "lockedAmount": "Locked Amount",
-      "bridgedAmount": "Bridged Amount",
-      "spice": "Spice",
-      "position": "Leaderboard Position",
-      "code": "Your Referral Code",
-      "lockedCapitalBreakdown": "Locked Capital Breakdown",
-      "revealCodeInfo": "Your referral code will be revealed once you have received your first spice point"
-    }
+    "leaderboards": {},
+    "quest": {},
+    "strategies": {},
+    "userInfo": {},
+    "welcomeBackModal": {},
+    "welcomeModal": {}
   },
   "home": {
     "title": "THE FIRST HYBRID L2",
