--- a/apps/evm/src/assets/locales/en/translation.json
+++ b/apps/evm/src/assets/locales/en/translation.json
@@ -96,8 +96,37 @@
         "description": "Below is the Spice you've harvested from apps. Keep participating to increase your future harvest!"
       }
     },
-    "welcomeBackModal": {},
-    "welcomeModal": {}
+    "welcomeBackModal": {
+      "title": "Welcome to BOB Fusion",
+      "subtitle": "The final season",
+      "description": "Fusion season 3 is your last ever chance to harvest Spice. Stake your Bitcoin for the highest multipliers and refer a friend to receive a share of all the Spice they collect.",
+      "performance": {
+        "title": "Your performance in seasons 1 & 2",
+        "totalHarvested": "Total Spice Harvested",
+        "rank": "Final Leaderboard Rank"
+      },
+      "disclaimer": "Once complete, your season 3 score will be added to seasons 1 and 2 to calculate your final Spice harvest.",
+      "moreCta": "Learn More",
+      "startCta": "Start Harvesting"
+    },
+    "welcomeModal": {
+      "title": "Welcome to BOB Fusion",
+      "subtitle": "The final season",
+      "steps": {
+        "one": {
+          "title": "Step One",
+          "description": "Step One Bridge your assets to BOB to start harvesting Spice.",
+          "tip": "TIP: Some assets earn more Spice than others. You can see which by clicking the “View Multipliers” button."
+        },
+        "two": {
+          "title": "Step Two",
+          "description": "Use your bridged assets in apps to maximise your Spice harvest.",
+          "tip": "TIP: Some types of apps offer greater multipliers than others. Explore the “Hot Strategies” section to learn more."
+        }
+      },
+      "hideCta": "Don't show this message again",
+      "startCta": "Start Harvesting"
+    }
   },
   "home": {
     "title": "THE FIRST HYBRID L2",
