--- a/apps/evm/src/assets/locales/en/translation.json
+++ b/apps/evm/src/assets/locales/en/translation.json
@@ -251,6 +251,18 @@
       },
       "hideCta": "Don't show this message again",
       "startCta": "Start Harvesting"
+    },
+    "withdrawModal": {
+      "title": "Season 1 has ended - Welcome to Season 2!",
+      "summary": "Congratulations! Your initial contribution to BOB’s growth earned you {{totalSpice}} Spice! This has secured you position {{rank}} on the leaderboard for Season 1.",
+      "share": "<xLink>Share your success with your friends</xLink> and invite them to join the Fusion campaign, earn 15% for every Spice they harvest!",
+      "seasonTwoDescription": "Bridge assets, provide liquidity, transact on-chain, and expand your network through referrals to climb the leaderboard faster than ever.",
+      "lockedFunds": "Locked Funds",
+      "currentSpice": "Current Spice",
+      "bridgeLabel": "Bridge to BOB",
+      "withdrawDescription": "Don't believe in the Bitcoin Renaissance? You can withdraw your funds from the contract to your wallet on Ethereum. You will no longer earn Spice if you withdraw your assets. <strong>You will keep the Spice harvested so far.</strong>",
+      "withdrawLabel": "Withdraw Assets",
+      "smartAccountsWarning": "Unfortunately, is not possible to bridge to BOB using smart accounts. We are working on adding support for this in the near future, so follow us for future updates."
     }
   },
   "apps": {
@@ -314,50 +326,7 @@
     "title": "THE FIRST HYBRID L2",
     "subtitle": "POWERED BY BTC & ETH",
     "content": "Combining liquidity and security from Bitcoin and Ethereum. Mainnet live!",
-    "dashboardLink": "View dashboard",
-    "lockedAmount": "Your locked value",
-    "harvestedSpice": "Your harvested Spice amount",
-    "refCodeLabel": "Enter your code:",
-    "buttonLabel": "Start Harvesting Spice",
-    "loginLabel": "Already harvesting?",
-    "loginButtonText": "Login with wallet",
-    "referralCodePrompt": "Need an access code? <discordLink>Join BOB on Discord</discordLink>",
-    "hero": {
-      "lockedAmount": "Total value locked:",
-      "season_one_tvl": "Season 1 TVL"
-    },
-    "backers": "Some of our backers",
-    "info": {
-      "title": "Ascend the ranks by gathering <highlight>SPICE</highlight>",
-      "content": "Spice (“points”) is needed to kick-start the chain-reaction of BOB Fusion. Spice symbolizes your contributions and achievements in the BOB community.  As you harvest, you shape—and thrive in—the Bitcoin Renaissance.",
-      "exploreLabel": "Explore the Ecosystem",
-      "exploreContent": "Amplify your Spice harvesting by diving into and engaging with our dynamic ecosystem of applications.",
-      "referLabel": "Refer others",
-      "referContent": "Share your invite code with fellow explorers and claim extra Spice harvest.",
-      "questsLabel": "Embark on quests",
-      "questsContent": "Dive deeper into the era of BOB Fusion and climb the ranks by completing quests (Coming soon)."
-    },
-    "partners": {
-      "title": "BOB Fusion Allies",
-      "content": "Explore campaigns of our fellow partners on the path to the Bitcoin Renaissance. Each campaign may have its own rules, benefits but also risks. Do your own research!"
-    }
-  },
-  "leaderboard": {
-    "title": "LEADERBOARD"
-  },
-  "signUp": {
-    "title": "ENTER THE WORLD OF <highlight>BOB Fusion</highlight>",
-    "subtitle": "Your journey starts here!",
-    "content": "Connect your EVM-compatible wallet, Twitter and Discord to participate. Engage with fellow adventurers, dive deep into the lore of BOB, and stay informed on campaign progress.",
-    "connectWallet": "Please connect a wallet",
-    "connect": "Connect",
-    "connected": "Connected",
-    "linkWallet": "Link wallet",
-    "join": "Join",
-    "discord": "Join BOB Discord",
-    "twitterStep": "Connect and follow BOB with your X account.",
-    "discordStep": "Connect and join BOB Discord.",
-    "followBOB": "Follow BOB"
+    "buttonLabel": "Start Harvesting Spice"
   },
   "navigation": {
     "leaderboard": "Leaderboard",
@@ -378,11 +347,6 @@
       "noAssets": "No assets shown",
       "connect": "Please connect a wallet",
       "connectLabel": "Connect Wallet"
-    },
-    "tokenTable": {
-      "asset": "Asset",
-      "balance": "Balance",
-      "connectBtcLabel": "Connect BTC Wallet"
     },
     "tooltips": {
       "bridge": {
